data/derived/comb/progs/unify/prog1008.ml.out
Characters 13-16:
  let _ = log (0.0-1.0);;
               ^^^
Error: This expression has type float but an expression was expected of type
         int
